<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4f4f4"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:gravity="center_horizontal"
                android:id="@+id/textView2"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:text="@string/indice_titulo" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        android:textSize="13sp"
                        android:textColor="#5c5c5c"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/indice_parrafo1" />

                    <TextView
                        android:id="@+id/textView6"
                        android:textSize="13sp"
                        android:textColor="#5c5c5c"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/indice_parrafo2" />

                    <TextView
                        android:id="@+id/textView8"
                        android:textSize="13sp"
                        android:textColor="#5c5c5c"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/indice_parrafo3" />

                    <TextView
                        android:id="@+id/textView9"
                        android:textSize="13sp"
                        android:layout_marginBottom="10dp"
                        android:textColor="#5c5c5c"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/indice_parrafo4" />

                    <TextView
                        android:id="@+id/textView10"
                        android:textSize="13sp"
                        android:layout_marginBottom="10dp"
                        android:textColor="#5c5c5c"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/indice_parrafo5" />

                    <TextView
                        android:textSize="13sp"
                        android:textColor="#5c5c5c"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/indice_parrafo6" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>