<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4f4f4"
    tools:context=".Main3Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/firma_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text="@string/firma_titulo"
                android:textColor="#545353"
                android:textSize="18sp" />

            <TextView
                android:gravity="center_horizontal"
                android:id="@+id/firma_enlaceweb"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#545353"
                android:textSize="13sp"
                android:layout_marginBottom="20dp"
                android:text="@string/firma_enlaceWeb" />

            <ImageView
                android:id="@+id/firma_logo"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:scaleType="fitXY"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                app:srcCompat="@drawable/programadoresperuanos"
                android:contentDescription="@string/firma_logoDescripcion" />

            <TextView
                android:id="@+id/firma_ejercicio"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textColor="#030303"
                android:textStyle="bold"
                android:text="@string/firma_ejercicioTitulo" />

            <TextView
                android:layout_width="280dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:layout_marginBottom="10dp"
                android:textColor="#303030"
                android:text="@string/firma_parrafo1" />

            <TextView
                android:id="@+id/firma_repositorio"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="13sp"
                android:textStyle="bold"
                android:textColor="#2977d7"
                android:layout_marginBottom="25dp"
                android:text="@string/firma_repositorio" />

            <TextView
                android:layout_width="280dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="#303030"
                android:layout_marginBottom="10dp"
                android:text="@string/firma_parrafo2" />

            <android.support.v7.widget.CardView
                android:animateLayoutChanges="true"
                android:id="@+id/firma_autor"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="20dp"
                app:cardBackgroundColor="#ffffff"
                android:layout_gravity="center_horizontal"
                android:layout_width="280dp"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_margin="8dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:src="@drawable/ic_android_black_24dp"
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:scaleType="fitXY"
                            android:contentDescription="@string/icono1" />

                        <TextView
                            android:textColor="#585858"
                            android:id="@+id/textView5"
                            android:textSize="12sp"
                            android:paddingLeft="10dp"
                            android:gravity="center_vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/firma_autorName"
                            android:paddingStart="10dp"
                            tools:ignore="RtlSymmetry" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:src="@drawable/ic_place_black_24dp"
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:scaleType="fitXY"
                            android:contentDescription="@string/icono1" />

                        <TextView
                            android:id="@+id/textView7"
                            android:textColor="#585858"
                            android:paddingLeft="10dp"
                            android:textSize="12sp"
                            android:gravity="center_vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/firma_autorPais"
                            android:paddingStart="10dp"
                            tools:ignore="RtlSymmetry" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:src="@drawable/ic_phone_black_24dp"
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:scaleType="fitXY"
                            android:contentDescription="@string/icono1" />

                        <TextView
                            android:id="@+id/textView9"
                            android:textColor="#585858"
                            android:textSize="12sp"
                            android:paddingLeft="10dp"
                            android:gravity="center_vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/firma_autorPhone"
                            android:paddingStart="10dp"
                            tools:ignore="RtlSymmetry" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>